Added a JShell plugin