@@ -6,6 +6,7 @@
 plugins {
 	id 'java-library'
 	id 'io.github.krakowski.jextract' version '0.4.2'
+	id 'com.github.mrsarm.jshell.plugin' version '1.2.1'
 }
 
 version '0.1.0'
@@ -69,4 +70,8 @@ jextract {
 			]
 		}
 	}
+}
+
+jshell {
+	args '--enable-preview'
 }
